v2.0
- PEP-8 cleanup (thanks Gabe Farrell)
- moved over to bzr ()

v1.7 Wed Jan 30 21:52:48 EST 2008
- documentation fixes (thanks Gabe Farrell)
- fixed marc8 stderr printing, and added quiet argument to MARC8_to_Unicode
  for people who'd rather not see warnings on STDERR.

v1.6 Thu Jan 24 14:17:18 EST 2008
- marc8 now prints warnings on stderr rather than stdout

v1.5 Wed Jan  2 21:54:56 EST 2008
- added pymarc.marcxml.record_to_xml for converting a record to marcxml
  and corresponding test in test/xml_test.py

v1.4 Tue Nov 27 13:44:41 EST 2007
- map_xml can take multiple files

v1.3 Tue Nov 20 08:48:51 EST 2007
- added map_xml to pymarc/marcxml.py for a more functional processing

v1.2 Tue Sep  4 08:22:44 EDT 2007
- added pymarc/marcxml.py for marcxml reading support
- added test of marcxml reading: test/xml_test.py
- modified Field so that default indicators and subfields are 
  not set to a default array in the method signature. This causes
  subtle bugs since new arrays are not contructed for 
  repeated calls to the constructor.

v1.1 Wed Aug 15 08:34:39 EDT 2007
- updated the homepage for the package

v1.0 Wed Jul 18 14:55:19 EDT 2007
- added marc8_to_unicode() support for applications that need to 
  convert marc8 data to unicode ... many thanks for Aaron Lav 
  for allowing relevant bits of code to be lifted from PyZ3950; 
  also thanks to Mark Matienzo for the idea and for testing.
- added some tests for new marc8_to_unicode functionality. Thanks
  to the Library of Congress for providing equivalent marc8 and 
  utf8 marc record batches to use for constructing test data
- The folowing changes are courtesy of Mark Matienzo:
  - modified __str__ methods for Field and Record to produce 
    data in MARCMaker [1] format. THIS MAY BREAK YOUR CODE. This is
    not a complete implementation as support for special character
    mnemonics [2] has yet to be added
  - modified test cases for string conversion and added tests for
    control fields